test/spec/if-else-end-label-superfluous.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/if-else-end-label-superfluous.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/if-else-end-label-superfluous.fail.wast:1:23: unexpected label "$l"
(module (func if else $l end $l))
                      ^^
out/third_party/testsuite/if-else-end-label-superfluous.fail.wast:1:30: unexpected label "$l"
(module (func if else $l end $l))
                             ^^
;;; STDERR ;;)
